--- a/src/css/common.css
+++ b/src/css/common.css
@@ -173,3 +173,47 @@ a:focus {
   background-color: #D5D3D3;
   color: #8A8A8A;
 }
+
+/* Promises */
+
+.form {
+  display: flex;
+  flex-direction: column;
+  width: 400px;
+  padding: 24px;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 4px;
+  background-color: #ACB5AA;
+  border: none;
+}
+
+.form label {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 24px;
+  color: #3C3535;
+  border-radius: 4px;
+  font-size: large;
+  font-weight: 700;
+}
+
+.form button {
+  padding: 12px 12px;
+  font: inherit;
+  cursor: pointer;
+  font-size: large;
+  font-weight: 700;
+  border: none;
+  border-radius: 4px;
+  background-color: #5C7D6B;
+  color: #FFF;
+}
+
+.form input {
+  padding: 12px 12px;
+  border: none;
+  outline: none;
+  border-radius: 4px;
+  background-color: #F0F3ED;
+}
